--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@
   list-style: none;
   text-decoration: none;
   font-family: mont-reg;
+  color: #f1f2ff;
 }
 
 html {
@@ -12,8 +13,10 @@ html {
 }
 
 body {
-  /* height: 100vh; */
+  height: 100vh;
   width: 100vw;
+  background-color: #000000;
+  background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
 }
 
 .header-container {
@@ -36,13 +39,13 @@ body {
   /* padding: 1rem; */
 }
 .header-nav-container li {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   padding: 0.2rem 1rem;
   border-radius: 5px;
   cursor: pointer;
 }
 .header-nav-container li:hover {
-  background-color: #44a4f2;
+  text-decoration: underline;
   color: aliceblue;
   transition: all 0.4s;
 }
@@ -68,9 +71,9 @@ body {
   justify-content: center;
   border: 1px solid #f1f2ff;
   padding: 3em 2em;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   align-self: center;
-  box-shadow: 9px 9px 18px #94a9e4, -9px -9px 18px #ffffff;
+  box-shadow: 5px 5px 15px 0.5px rgba(255, 255, 255, 0.25);
 }
 .form-container h1 {
   font-size: 3rem;
@@ -87,6 +90,7 @@ input {
   width: 30rem;
   padding: 1rem;
   margin-bottom: 2rem;
+  color: #000000;
 }
 .form-btn {
   width: 10rem;
@@ -96,13 +100,16 @@ input {
   border-radius: 5px;
   font-size: 1.6rem;
   cursor: pointer;
-  box-shadow: 1px 1px 5px black;
-  color: #f1f2ff;
+  box-shadow: 2px 2px 10px 0.5px rgba(255, 255, 255, 0.25);
+  text-align: center;
 }
 .form-btn:hover {
-  color: black;
-  background-color: #f1f2ff;
+  background-color: #0077ff;
   transition: all 0.5s;
+}
+
+input::placeholder {
+  color: #616161;
 }
 
 @font-face {
@@ -117,4 +124,15 @@ input {
 
 .hidden {
   display: none;
+}
+
+.circle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #349dff;
+  clip-path: circle(500px at left 700px);
+  z-index: -100;
 }
