--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,8 @@
   list-style: none;
   text-decoration: none;
   font-family: mont-reg;
-  color: #f1f2ff;
+  color: #404040;
+  /* color: #f1f2ff; */
 }
 
 html {
@@ -14,9 +15,9 @@ html {
 
 body {
   height: 100vh;
-  width: 100vw;
-  background-color: #000000;
-  background-image: linear-gradient(147deg, #000000 0%, #04619f 74%);
+  width: 100%;
+  background-color: #5ca0f2;
+  background-image: linear-gradient(315deg, #5ca0f2 0%, #f5f7f6 74%);
 }
 
 .header-container {
@@ -27,7 +28,7 @@ body {
   margin: 2rem 0 10rem 0;
 }
 .header-container h1 {
-  font-size: 1.9rem;
+  font-size: 3rem;
 }
 .header-nav-container {
   width: 20%;
@@ -35,18 +36,17 @@ body {
 .header-container ul {
   display: flex;
   justify-content: space-around;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
   /* padding: 1rem; */
 }
 .header-nav-container li {
   /* border: 1px solid black; */
   padding: 0.2rem 1rem;
-  border-radius: 5px;
+
   cursor: pointer;
 }
 .header-nav-container li:hover {
   text-decoration: underline;
-  color: aliceblue;
   transition: all 0.4s;
 }
 
@@ -64,6 +64,9 @@ body {
 .left-content-container,
 .right-content-container {
   width: 25%;
+}
+.left-content-container p {
+  font-size: 1.5rem;
 }
 
 .form-container {
